Add lazy loading to all images for improved performance

--- a/service-area.html
+++ b/service-area.html
@@ -662,7 +662,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo">
+                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" width="200" height="55">
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
