--- a/azle.html
+++ b/azle.html
@@ -862,7 +862,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo">
+                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" width="200" height="55">
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -914,7 +914,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo">
+                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" width="500" height="500">
                 </div>
             </div>
         </div>
@@ -955,7 +955,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FrenchDrain.png" alt="French Drain Installation in Azle, TX">
+                        <img src="images/FrenchDrain.png" alt="French Drain Installation in Azle, TX" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>French Drains</h3>
@@ -965,7 +965,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/YardGrading.png" alt="Yard Grading in Azle, TX">
+                        <img src="images/YardGrading.png" alt="Yard Grading in Azle, TX" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Yard Grading</h3>
@@ -975,7 +975,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/CatchBasin.png" alt="Catch Basin Installation in Azle, TX">
+                        <img src="images/CatchBasin.png" alt="Catch Basin Installation in Azle, TX" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Catch Basins</h3>
@@ -985,7 +985,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DownspoutExtension.png" alt="Downspout Extensions in Azle, TX">
+                        <img src="images/DownspoutExtension.png" alt="Downspout Extensions in Azle, TX" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Downspout Extensions</h3>
@@ -995,7 +995,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage in Azle, TX">
+                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage in Azle, TX" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Foundation Drainage</h3>
@@ -1005,7 +1005,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DrainageRepair.png" alt="Drainage Repairs in Azle, TX">
+                        <img src="images/DrainageRepair.png" alt="Drainage Repairs in Azle, TX" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Drainage Repairs</h3>
