--- a/index.html
+++ b/index.html
@@ -1994,7 +1994,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo">
+                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" width="200" height="55">
                 </a>
                 <nav class="nav">
                     <div class="nav-dropdown">
@@ -2060,11 +2060,11 @@
                     <div class="before-after-container">
                         <div class="before-section">
                             <div class="label">BEFORE</div>
-                            <img src="images/MainBeforePic.png" alt="Drainage problem before Azle Drainage service">
+                            <img src="images/MainBeforePic.png" alt="Drainage problem before Azle Drainage service" loading="lazy" width="800" height="600">
                         </div>
                         <div class="after-section">
                             <div class="label">AFTER</div>
-                            <img src="images/MainAfterPic.png" alt="Fixed drainage after Azle Drainage service">
+                            <img src="images/MainAfterPic.png" alt="Fixed drainage after Azle Drainage service" loading="lazy" width="800" height="600">
                         </div>
                     </div>
                 </div>
@@ -2081,19 +2081,19 @@
                     <h2 class="section-title">Sound Familiar?</h2>
                     <ul class="problem-list">
                         <li>
-                            <img src="images/Problem1.png" alt="Yard flooding problem" class="problem-icon-img">
+                            <img src="images/Problem1.png" alt="Yard flooding problem" class="problem-icon-img" loading="lazy" width="96" height="96">
                             <span>My yard floods every time it rains</span>
                         </li>
                         <li>
-                            <img src="images/Problem2.png" alt="Foundation water pooling problem" class="problem-icon-img">
+                            <img src="images/Problem2.png" alt="Foundation water pooling problem" class="problem-icon-img" loading="lazy" width="96" height="96">
                             <span>Water pools around my foundation</span>
                         </li>
                         <li>
-                            <img src="images/Problem3.png" alt="Muddy yard problem" class="problem-icon-img">
+                            <img src="images/Problem3.png" alt="Muddy yard problem" class="problem-icon-img" loading="lazy" width="96" height="96">
                             <span>Standing water turns my yard into a muddy mess</span>
                         </li>
                         <li>
-                            <img src="images/Problem4.png" alt="Foundation damage problem" class="problem-icon-img">
+                            <img src="images/Problem4.png" alt="Foundation damage problem" class="problem-icon-img" loading="lazy" width="96" height="96">
                             <span>I'm worried about costly foundation damage</span>
                         </li>
                     </ul>
@@ -2103,19 +2103,19 @@
                     <h2 class="section-title">Azle Drainage Delivers</h2>
                     <ul class="solution-list">
                         <li>
-                            <img src="images/Solution1.png" alt="Professional drainage solution" class="solution-icon-img">
+                            <img src="images/Solution1.png" alt="Professional drainage solution" class="solution-icon-img" loading="lazy" width="96" height="96">
                             <span>Professional drainage systems that eliminate flooding fast</span>
                         </li>
                         <li>
-                            <img src="images/Solution2.png" alt="Foundation protection solution" class="solution-icon-img">
+                            <img src="images/Solution2.png" alt="Foundation protection solution" class="solution-icon-img" loading="lazy" width="96" height="96">
                             <span>Foundation protection with proven water management</span>
                         </li>
                         <li>
-                            <img src="images/Solution3.png" alt="Fast results solution" class="solution-icon-img">
+                            <img src="images/Solution3.png" alt="Fast results solution" class="solution-icon-img" loading="lazy" width="96" height="96">
                             <span>Immediate results—no mess, no disruption</span>
                         </li>
                         <li>
-                            <img src="images/Solution4.png" alt="Property value solution" class="solution-icon-img">
+                            <img src="images/Solution4.png" alt="Property value solution" class="solution-icon-img" loading="lazy" width="96" height="96">
                             <span>Solutions that boost your property value</span>
                         </li>
                     </ul>
@@ -2167,7 +2167,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FrenchDrain.png" alt="French Drain Installation">
+                        <img src="images/FrenchDrain.png" alt="French Drain Installation" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>French Drains</h3>
@@ -2177,7 +2177,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/YardGrading.png" alt="Yard Grading">
+                        <img src="images/YardGrading.png" alt="Yard Grading" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Yard Grading</h3>
@@ -2187,7 +2187,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/CatchBasin.png" alt="Catch Basin">
+                        <img src="images/CatchBasin.png" alt="Catch Basin" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Catch Basins</h3>
@@ -2197,7 +2197,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DownspoutExtension.png" alt="Downspout Extension">
+                        <img src="images/DownspoutExtension.png" alt="Downspout Extension" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Downspout Extensions</h3>
@@ -2207,7 +2207,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage">
+                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Foundation Drainage</h3>
@@ -2217,7 +2217,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DrainageRepair.png" alt="Drainage Repair">
+                        <img src="images/DrainageRepair.png" alt="Drainage Repair" loading="lazy" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Drainage Repairs</h3>
@@ -2242,52 +2242,52 @@
             <div class="cities-grid">
                 <div class="city-card">
                     <h3>Azle</h3>
-                    <img src="images/AzleLogo.png" alt="City of Azle" class="city-logo">
+                    <img src="images/AzleLogo.png" alt="City of Azle" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="azle.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Springtown</h3>
-                    <img src="images/SpringtownLogo.png" alt="City of Springtown" class="city-logo">
+                    <img src="images/SpringtownLogo.png" alt="City of Springtown" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="springtown.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Weatherford</h3>
-                    <img src="images/WeatherfordLogo.png" alt="City of Weatherford" class="city-logo">
+                    <img src="images/WeatherfordLogo.png" alt="City of Weatherford" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="weatherford.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Fort Worth</h3>
-                    <img src="images/FortWorthLogo.png" alt="City of Fort Worth" class="city-logo">
+                    <img src="images/FortWorthLogo.png" alt="City of Fort Worth" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="fort-worth.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Boyd</h3>
-                    <img src="images/BoydLogo.png" alt="City of Boyd" class="city-logo">
+                    <img src="images/BoydLogo.png" alt="City of Boyd" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="boyd.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Willow Park</h3>
-                    <img src="images/WillowParkLogo.png" alt="City of Willow Park" class="city-logo">
+                    <img src="images/WillowParkLogo.png" alt="City of Willow Park" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="willow-park.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Saginaw</h3>
-                    <img src="images/SaginawLogo.png" alt="City of Saginaw" class="city-logo">
+                    <img src="images/SaginawLogo.png" alt="City of Saginaw" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="saginaw.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Reno</h3>
-                    <img src="images/RenoLogo.png" alt="City of Reno" class="city-logo">
+                    <img src="images/RenoLogo.png" alt="City of Reno" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="reno.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Briar</h3>
-                    <img src="images/BriarLogo.png" alt="City of Briar" class="city-logo">
+                    <img src="images/BriarLogo.png" alt="City of Briar" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="briar.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Newark</h3>
-                    <img src="images/NewarkLogo.png" alt="City of Newark" class="city-logo">
+                    <img src="images/NewarkLogo.png" alt="City of Newark" class="city-logo" loading="lazy" width="140" height="100">
                     <a href="newark.html" class="city-link">Learn More →</a>
                 </div>
             </div>
