--- a/newark.html
+++ b/newark.html
@@ -770,7 +770,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo">
+                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" width="200" height="55">
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -822,7 +822,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo">
+                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" width="500" height="500">
                 </div>
             </div>
         </div>
@@ -863,7 +863,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FrenchDrain.png" alt="French Drain Installation in Newark, TX">
+                        <img src="images/FrenchDrain.png" loading="lazy" width="800" height="600" alt="French Drain Installation in Newark, TX">
                     </div>
                     <div class="service-content">
                         <h3>French Drains</h3>
@@ -873,7 +873,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/YardGrading.png" alt="Yard Grading in Newark, TX">
+                        <img src="images/YardGrading.png" loading="lazy" width="800" height="600" alt="Yard Grading in Newark, TX">
                     </div>
                     <div class="service-content">
                         <h3>Yard Grading</h3>
@@ -883,7 +883,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/CatchBasin.png" alt="Catch Basin Installation in Newark, TX">
+                        <img src="images/CatchBasin.png" loading="lazy" width="800" height="600" alt="Catch Basin Installation in Newark, TX">
                     </div>
                     <div class="service-content">
                         <h3>Catch Basins</h3>
@@ -893,7 +893,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DownspoutExtension.png" alt="Downspout Extensions in Newark, TX">
+                        <img src="images/DownspoutExtension.png" loading="lazy" width="800" height="600" alt="Downspout Extensions in Newark, TX">
                     </div>
                     <div class="service-content">
                         <h3>Downspout Extensions</h3>
@@ -903,7 +903,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage in Newark, TX">
+                        <img src="images/FoundationDrainage.png" loading="lazy" width="800" height="600" alt="Foundation Drainage in Newark, TX">
                     </div>
                     <div class="service-content">
                         <h3>Foundation Drainage</h3>
@@ -913,7 +913,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DrainageRepair.png" alt="Drainage Repairs in Newark, TX">
+                        <img src="images/DrainageRepair.png" loading="lazy" width="800" height="600" alt="Drainage Repairs in Newark, TX">
                     </div>
                     <div class="service-content">
                         <h3>Drainage Repairs</h3>
