--- a/weatherford.html
+++ b/weatherford.html
@@ -833,7 +833,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo">
+                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" width="200" height="55">
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -885,7 +885,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo">
+                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" width="500" height="500">
                 </div>
             </div>
         </div>
@@ -926,7 +926,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FrenchDrain.png" alt="French Drain Installation in Weatherford, TX">
+                        <img src="images/FrenchDrain.png" loading="lazy" width="800" height="600" alt="French Drain Installation in Weatherford, TX">
                     </div>
                     <div class="service-content">
                         <h3>French Drains</h3>
@@ -936,7 +936,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/YardGrading.png" alt="Yard Grading in Weatherford, TX">
+                        <img src="images/YardGrading.png" loading="lazy" width="800" height="600" alt="Yard Grading in Weatherford, TX">
                     </div>
                     <div class="service-content">
                         <h3>Yard Grading</h3>
@@ -946,7 +946,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/CatchBasin.png" alt="Catch Basin Installation in Weatherford, TX">
+                        <img src="images/CatchBasin.png" loading="lazy" width="800" height="600" alt="Catch Basin Installation in Weatherford, TX">
                     </div>
                     <div class="service-content">
                         <h3>Catch Basins</h3>
@@ -956,7 +956,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DownspoutExtension.png" alt="Downspout Extensions in Weatherford, TX">
+                        <img src="images/DownspoutExtension.png" loading="lazy" width="800" height="600" alt="Downspout Extensions in Weatherford, TX">
                     </div>
                     <div class="service-content">
                         <h3>Downspout Extensions</h3>
@@ -966,7 +966,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage in Weatherford, TX">
+                        <img src="images/FoundationDrainage.png" loading="lazy" width="800" height="600" alt="Foundation Drainage in Weatherford, TX">
                     </div>
                     <div class="service-content">
                         <h3>Foundation Drainage</h3>
@@ -976,7 +976,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DrainageRepair.png" alt="Drainage Repairs in Weatherford, TX">
+                        <img src="images/DrainageRepair.png" loading="lazy" width="800" height="600" alt="Drainage Repairs in Weatherford, TX">
                     </div>
                     <div class="service-content">
                         <h3>Drainage Repairs</h3>
