--- a/azle.html
+++ b/azle.html
@@ -19,7 +19,9 @@
     <link rel="canonical" href="https://azledrainage.com/azle.html">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Preload Critical Above-the-Fold Images -->
+    <link rel="preload" as="image" href="images/AzleDrainage2ndLogo.png">
+    <link rel="preload" as="image" href="images/AzleDrainageMAINlogo.png">    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
     <!-- Google Maps API for Address Autocomplete -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6e-nSC3EyqDCGb20gEJSlyfxmU8tj8qQ&libraries=places"></script>
@@ -862,7 +864,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" width="200" height="55">
+                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" decoding="async" width="200" height="55">
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -914,7 +916,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" width="500" height="500">
+                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" decoding="async" width="500" height="500">
                 </div>
             </div>
         </div>
@@ -955,7 +957,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FrenchDrain.png" alt="French Drain Installation in Azle, TX" loading="lazy" width="800" height="600">
+                        <img src="images/FrenchDrain.png" alt="French Drain Installation in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>French Drains</h3>
@@ -965,7 +967,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/YardGrading.png" alt="Yard Grading in Azle, TX" loading="lazy" width="800" height="600">
+                        <img src="images/YardGrading.png" alt="Yard Grading in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Yard Grading</h3>
@@ -975,7 +977,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/CatchBasin.png" alt="Catch Basin Installation in Azle, TX" loading="lazy" width="800" height="600">
+                        <img src="images/CatchBasin.png" alt="Catch Basin Installation in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Catch Basins</h3>
@@ -985,7 +987,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DownspoutExtension.png" alt="Downspout Extensions in Azle, TX" loading="lazy" width="800" height="600">
+                        <img src="images/DownspoutExtension.png" alt="Downspout Extensions in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Downspout Extensions</h3>
@@ -995,7 +997,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage in Azle, TX" loading="lazy" width="800" height="600">
+                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Foundation Drainage</h3>
@@ -1005,7 +1007,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DrainageRepair.png" alt="Drainage Repairs in Azle, TX" loading="lazy" width="800" height="600">
+                        <img src="images/DrainageRepair.png" alt="Drainage Repairs in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
                     </div>
                     <div class="service-content">
                         <h3>Drainage Repairs</h3>
@@ -1066,19 +1068,6 @@
                         <div class="error-message" id="address-error">Please enter your property address</div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="service_interest">Service Needed *</label>
-                        <select id="service_interest" name="service_interest" required>
-                            <option value="">Select Service</option>
-                            <option value="French Drains">French Drains</option>
-                            <option value="Yard Grading">Yard Grading</option>
-                            <option value="Catch Basins">Catch Basins</option>
-                            <option value="Downspout Extensions">Downspout Extensions</option>
-                            <option value="Foundation Drainage">Foundation Drainage</option>
-                            <option value="Drainage Repairs">Drainage Repairs</option>
-                            <option value="Not Sure / Multiple">Not Sure / Multiple Services</option>
-                        </select>
-                    </div>
 
                     <input type="hidden" name="service_type" value="Drainage">
                     <input type="hidden" id="city" name="city" value="Azle">
@@ -1145,7 +1134,7 @@
                     address: formData.get('address') ? formData.get('address').trim() : '',
                     city: formData.get('city') || 'Azle',
                     state: formData.get('state') || 'TX',
-                    service_interest: formData.get('service_interest') || '',
+                    service_interest: '', // Always empty - will qualify via text
                     service_type: formData.get('service_type') || 'Drainage'
                 };
                 
