--- a/downspout-extensions.html
+++ b/downspout-extensions.html
@@ -88,7 +88,9 @@
     </script>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Preload Critical Above-the-Fold Images -->
+    <link rel="preload" as="image" href="images/AzleDrainage2ndLogo.png">
+    <link rel="preload" as="image" href="images/AzleDrainageMAINlogo.png">    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <style>
         /* Reset and Base Styles */
@@ -937,7 +939,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" width="200" height="55">
+                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" decoding="async" width="200" height="55">
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -986,7 +988,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" width="500" height="500">
+                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" decoding="async" width="500" height="500">
                 </div>
             </div>
         </div>
@@ -1185,18 +1187,6 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="service_interest">Service Needed *</label>
-                        <select id="service_interest" name="service_interest" required>
-                            <option value="">Select Service</option>
-                            <option value="French Drains">French Drains</option>
-                            <option value="Yard Grading">Yard Grading</option>
-                            <option value="Catch Basins">Catch Basins</option>
-                            <option value="Downspout Extensions">Downspout Extensions</option>
-                            <option value="Foundation Drainage">Foundation Drainage</option>
-                            <option value="Drainage Repairs">Drainage Repairs</option>
-                            <option value="Not Sure / Multiple">Not Sure / Multiple Services</option>
-                        </select>
-                        <div class="error-message" id="service_interest-error">Please select a service</div>
                     </div>
 
                     <input type="hidden" name="service_type" value="Drainage">
@@ -1271,7 +1261,7 @@
                 name: formData.get('name').trim(),
                 phone: formData.get('phone').trim(),
                 address: formData.get('address').trim(),
-                service_interest: formData.get('service_interest'),
+                service_interest: '', // Always empty - will qualify via text
                 service_type: formData.get('service_type'),
                 location: formData.get('location')
             };
