Update homepage tagline

--- a/index.html
+++ b/index.html
@@ -2104,7 +2104,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Serious Equipment. Serious Results.</h1>
+                    <h1>We Fix Standing Water.</h1>
 
                     <!-- END OF YEAR SALE OFFER -->
                     <div class="sale-offer-container">
