Optimize images: resize, convert to WebP, and update HTML to use picture elements
- Resize service images to max 800px width (reduced from 1500-2800px)
- Resize logo images to max 300px width (reduced from 1024px)
- Convert all images over 100KB to WebP format
- Reduce total image size from ~70MB to ~1.5MB (98% reduction)
- Update all HTML files to use <picture> elements with WebP fallback
- Service images: 1.5-8.7MB -> 20-128KB
- Logo images: 120KB-1.4MB -> 8-16KB

--- a/french-drains.html
+++ b/french-drains.html
@@ -1002,7 +1002,10 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" decoding="async" width="200" height="55">
+                    <picture>
+  <source srcset="images/AzleDrainage2ndLogo.webp" type="image/webp">
+  <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" decoding="async" width="200" height="55">
+</picture>
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -1051,7 +1054,10 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" decoding="async" width="500" height="500">
+                    <picture>
+  <source srcset="images/AzleDrainageMAINlogo.webp" type="image/webp">
+  <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" decoding="async" width="500" height="500">
+</picture>
                 </div>
             </div>
         </div>
