--- a/index.html
+++ b/index.html
@@ -2057,7 +2057,10 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="eager" decoding="async" width="200" height="55">
+                    <picture>
+  <source srcset="images/AzleDrainage2ndLogo.webp" type="image/webp">
+  <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="eager" decoding="async" width="200" height="55">
+</picture>
                 </a>
                 <nav class="nav">
                     <div class="nav-dropdown">
@@ -2123,11 +2126,17 @@
                     <div class="before-after-container">
                         <div class="before-section">
                             <div class="label">BEFORE</div>
-                            <img src="images/MainBeforePic.png" alt="Drainage problem before Azle Drainage service" loading="eager" decoding="async" width="800" height="600">
+                            <picture>
+  <source srcset="images/MainBeforePic.webp" type="image/webp">
+  <img src="images/MainBeforePic.png" alt="Drainage problem before Azle Drainage service" loading="eager" decoding="async" width="800" height="600">
+</picture>
                         </div>
                         <div class="after-section">
                             <div class="label">AFTER</div>
-                            <img src="images/MainAfterPic.png" alt="Fixed drainage after Azle Drainage service" loading="eager" decoding="async" width="800" height="600">
+                            <picture>
+  <source srcset="images/MainAfterPic.webp" type="image/webp">
+  <img src="images/MainAfterPic.png" alt="Fixed drainage after Azle Drainage service" loading="eager" decoding="async" width="800" height="600">
+</picture>
                         </div>
                     </div>
                 </div>
@@ -2144,19 +2153,31 @@
                     <h2 class="section-title">Sound Familiar?</h2>
                     <ul class="problem-list">
                         <li>
-                            <img src="images/Problem1.png" alt="Yard flooding problem" class="problem-icon-img" loading="lazy" decoding="async" width="96" height="96">
+                            <picture>
+  <source srcset="images/Problem1.webp" type="image/webp">
+  <img src="images/Problem1.png" alt="Yard flooding problem" class="problem-icon-img" loading="lazy" decoding="async" width="96" height="96">
+</picture>
                             <span>My yard floods every time it rains</span>
                         </li>
                         <li>
-                            <img src="images/Problem2.png" alt="Foundation water pooling problem" class="problem-icon-img" loading="lazy" decoding="async" width="96" height="96">
+                            <picture>
+  <source srcset="images/Problem2.webp" type="image/webp">
+  <img src="images/Problem2.png" alt="Foundation water pooling problem" class="problem-icon-img" loading="lazy" decoding="async" width="96" height="96">
+</picture>
                             <span>Water pools around my foundation</span>
                         </li>
                         <li>
-                            <img src="images/Problem3.png" alt="Muddy yard problem" class="problem-icon-img" loading="lazy" decoding="async" width="96" height="96">
+                            <picture>
+  <source srcset="images/Problem3.webp" type="image/webp">
+  <img src="images/Problem3.png" alt="Muddy yard problem" class="problem-icon-img" loading="lazy" decoding="async" width="96" height="96">
+</picture>
                             <span>Standing water turns my yard into a muddy mess</span>
                         </li>
                         <li>
-                            <img src="images/Problem4.png" alt="Foundation damage problem" class="problem-icon-img" loading="lazy" decoding="async" width="96" height="96">
+                            <picture>
+  <source srcset="images/Problem4.webp" type="image/webp">
+  <img src="images/Problem4.png" alt="Foundation damage problem" class="problem-icon-img" loading="lazy" decoding="async" width="96" height="96">
+</picture>
                             <span>I'm worried about costly foundation damage</span>
                         </li>
                     </ul>
@@ -2166,19 +2187,31 @@
                     <h2 class="section-title">Azle Drainage Delivers</h2>
                     <ul class="solution-list">
                         <li>
-                            <img src="images/Solution1.png" alt="Professional drainage solution" class="solution-icon-img" loading="lazy" decoding="async" width="96" height="96">
+                            <picture>
+  <source srcset="images/Solution1.webp" type="image/webp">
+  <img src="images/Solution1.png" alt="Professional drainage solution" class="solution-icon-img" loading="lazy" decoding="async" width="96" height="96">
+</picture>
                             <span>Professional drainage systems that eliminate flooding fast</span>
                         </li>
                         <li>
-                            <img src="images/Solution2.png" alt="Foundation protection solution" class="solution-icon-img" loading="lazy" decoding="async" width="96" height="96">
+                            <picture>
+  <source srcset="images/Solution2.webp" type="image/webp">
+  <img src="images/Solution2.png" alt="Foundation protection solution" class="solution-icon-img" loading="lazy" decoding="async" width="96" height="96">
+</picture>
                             <span>Foundation protection with proven water management</span>
                         </li>
                         <li>
-                            <img src="images/Solution3.png" alt="Fast results solution" class="solution-icon-img" loading="lazy" decoding="async" width="96" height="96">
+                            <picture>
+  <source srcset="images/Solution3.webp" type="image/webp">
+  <img src="images/Solution3.png" alt="Fast results solution" class="solution-icon-img" loading="lazy" decoding="async" width="96" height="96">
+</picture>
                             <span>Immediate results—no mess, no disruption</span>
                         </li>
                         <li>
-                            <img src="images/Solution4.png" alt="Property value solution" class="solution-icon-img" loading="lazy" decoding="async" width="96" height="96">
+                            <picture>
+  <source srcset="images/Solution4.webp" type="image/webp">
+  <img src="images/Solution4.png" alt="Property value solution" class="solution-icon-img" loading="lazy" decoding="async" width="96" height="96">
+</picture>
                             <span>Solutions that boost your property value</span>
                         </li>
                     </ul>
@@ -2230,7 +2263,10 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FrenchDrain.png" alt="French Drain Installation" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/FrenchDrain.webp" type="image/webp">
+  <img src="images/FrenchDrain.png" alt="French Drain Installation" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>French Drains</h3>
@@ -2240,7 +2276,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/YardGrading.png" alt="Yard Grading" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/YardGrading.webp" type="image/webp">
+  <img src="images/YardGrading.png" alt="Yard Grading" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Yard Grading</h3>
@@ -2250,7 +2289,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/CatchBasin.png" alt="Catch Basin" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/CatchBasin.webp" type="image/webp">
+  <img src="images/CatchBasin.png" alt="Catch Basin" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Catch Basins</h3>
@@ -2260,7 +2302,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DownspoutExtension.png" alt="Downspout Extension" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/DownspoutExtension.webp" type="image/webp">
+  <img src="images/DownspoutExtension.png" alt="Downspout Extension" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Downspout Extensions</h3>
@@ -2270,7 +2315,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/FoundationDrainage.webp" type="image/webp">
+  <img src="images/FoundationDrainage.png" alt="Foundation Drainage" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Foundation Drainage</h3>
@@ -2280,7 +2328,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DrainageRepair.png" alt="Drainage Repair" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/DrainageRepair.webp" type="image/webp">
+  <img src="images/DrainageRepair.png" alt="Drainage Repair" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Drainage Repairs</h3>
@@ -2305,12 +2356,18 @@
             <div class="cities-grid">
                 <div class="city-card">
                     <h3>Azle</h3>
-                    <img src="images/AzleLogo.png" alt="City of Azle" class="city-logo" loading="lazy" decoding="async" decoding="async" width="140" height="100">
+                    <picture>
+  <source srcset="images/AzleLogo.webp" type="image/webp">
+  <img src="images/AzleLogo.png" alt="City of Azle" class="city-logo" loading="lazy" decoding="async" decoding="async" width="140" height="100">
+</picture>
                     <a href="azle.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Springtown</h3>
-                    <img src="images/SpringtownLogo.png" alt="City of Springtown" class="city-logo" loading="lazy" decoding="async" width="140" height="100">
+                    <picture>
+  <source srcset="images/SpringtownLogo.webp" type="image/webp">
+  <img src="images/SpringtownLogo.png" alt="City of Springtown" class="city-logo" loading="lazy" decoding="async" width="140" height="100">
+</picture>
                     <a href="springtown.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
@@ -2325,7 +2382,10 @@
                 </div>
                 <div class="city-card">
                     <h3>Boyd</h3>
-                    <img src="images/BoydLogo.png" alt="City of Boyd" class="city-logo" loading="lazy" decoding="async" width="140" height="100">
+                    <picture>
+  <source srcset="images/BoydLogo.webp" type="image/webp">
+  <img src="images/BoydLogo.png" alt="City of Boyd" class="city-logo" loading="lazy" decoding="async" width="140" height="100">
+</picture>
                     <a href="boyd.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
@@ -2335,12 +2395,18 @@
                 </div>
                 <div class="city-card">
                     <h3>Saginaw</h3>
-                    <img src="images/SaginawLogo.png" alt="City of Saginaw" class="city-logo" loading="lazy" decoding="async" width="140" height="100">
+                    <picture>
+  <source srcset="images/SaginawLogo.webp" type="image/webp">
+  <img src="images/SaginawLogo.png" alt="City of Saginaw" class="city-logo" loading="lazy" decoding="async" width="140" height="100">
+</picture>
                     <a href="saginaw.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
                     <h3>Reno</h3>
-                    <img src="images/RenoLogo.png" alt="City of Reno" class="city-logo" loading="lazy" decoding="async" width="140" height="100">
+                    <picture>
+  <source srcset="images/RenoLogo.webp" type="image/webp">
+  <img src="images/RenoLogo.png" alt="City of Reno" class="city-logo" loading="lazy" decoding="async" width="140" height="100">
+</picture>
                     <a href="reno.html" class="city-link">Learn More →</a>
                 </div>
                 <div class="city-card">
