--- a/azle.html
+++ b/azle.html
@@ -922,7 +922,10 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" decoding="async" width="200" height="55">
+                    <picture>
+  <source srcset="images/AzleDrainage2ndLogo.webp" type="image/webp">
+  <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" decoding="async" width="200" height="55">
+</picture>
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -974,7 +977,10 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" decoding="async" width="500" height="500">
+                    <picture>
+  <source srcset="images/AzleDrainageMAINlogo.webp" type="image/webp">
+  <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" decoding="async" width="500" height="500">
+</picture>
                 </div>
             </div>
         </div>
@@ -1015,7 +1021,10 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FrenchDrain.png" alt="French Drain Installation in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/FrenchDrain.webp" type="image/webp">
+  <img src="images/FrenchDrain.png" alt="French Drain Installation in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>French Drains</h3>
@@ -1025,7 +1034,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/YardGrading.png" alt="Yard Grading in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/YardGrading.webp" type="image/webp">
+  <img src="images/YardGrading.png" alt="Yard Grading in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Yard Grading</h3>
@@ -1035,7 +1047,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/CatchBasin.png" alt="Catch Basin Installation in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/CatchBasin.webp" type="image/webp">
+  <img src="images/CatchBasin.png" alt="Catch Basin Installation in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Catch Basins</h3>
@@ -1045,7 +1060,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DownspoutExtension.png" alt="Downspout Extensions in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/DownspoutExtension.webp" type="image/webp">
+  <img src="images/DownspoutExtension.png" alt="Downspout Extensions in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Downspout Extensions</h3>
@@ -1055,7 +1073,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FoundationDrainage.png" alt="Foundation Drainage in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/FoundationDrainage.webp" type="image/webp">
+  <img src="images/FoundationDrainage.png" alt="Foundation Drainage in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Foundation Drainage</h3>
@@ -1065,7 +1086,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DrainageRepair.png" alt="Drainage Repairs in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+                        <picture>
+  <source srcset="images/DrainageRepair.webp" type="image/webp">
+  <img src="images/DrainageRepair.png" alt="Drainage Repairs in Azle, TX" loading="lazy" decoding="async" width="800" height="600">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Drainage Repairs</h3>
