--- a/springtown.html
+++ b/springtown.html
@@ -893,7 +893,10 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" decoding="async" width="200" height="55">
+                    <picture>
+  <source srcset="images/AzleDrainage2ndLogo.webp" type="image/webp">
+  <img src="images/AzleDrainage2ndLogo.png" alt="Azle Drainage - Professional Drainage Solutions" class="header-logo" loading="lazy" decoding="async" width="200" height="55">
+</picture>
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -945,7 +948,10 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" decoding="async" width="500" height="500">
+                    <picture>
+  <source srcset="images/AzleDrainageMAINlogo.webp" type="image/webp">
+  <img src="images/AzleDrainageMAINlogo.png" alt="Azle Drainage Logo" class="hero-logo" loading="lazy" decoding="async" width="500" height="500">
+</picture>
                 </div>
             </div>
         </div>
@@ -986,7 +992,10 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FrenchDrain.png" loading="lazy" decoding="async" width="800" height="600" alt="French Drain Installation in Springtown, TX">
+                        <picture>
+  <source srcset="images/FrenchDrain.webp" type="image/webp">
+  <img src="images/FrenchDrain.png" loading="lazy" decoding="async" width="800" height="600" alt="French Drain Installation in Springtown, TX">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>French Drains</h3>
@@ -996,7 +1005,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/YardGrading.png" loading="lazy" decoding="async" width="800" height="600" alt="Yard Grading in Springtown, TX">
+                        <picture>
+  <source srcset="images/YardGrading.webp" type="image/webp">
+  <img src="images/YardGrading.png" loading="lazy" decoding="async" width="800" height="600" alt="Yard Grading in Springtown, TX">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Yard Grading</h3>
@@ -1006,7 +1018,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/CatchBasin.png" loading="lazy" decoding="async" width="800" height="600" alt="Catch Basin Installation in Springtown, TX">
+                        <picture>
+  <source srcset="images/CatchBasin.webp" type="image/webp">
+  <img src="images/CatchBasin.png" loading="lazy" decoding="async" width="800" height="600" alt="Catch Basin Installation in Springtown, TX">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Catch Basins</h3>
@@ -1016,7 +1031,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DownspoutExtension.png" loading="lazy" decoding="async" width="800" height="600" alt="Downspout Extensions in Springtown, TX">
+                        <picture>
+  <source srcset="images/DownspoutExtension.webp" type="image/webp">
+  <img src="images/DownspoutExtension.png" loading="lazy" decoding="async" width="800" height="600" alt="Downspout Extensions in Springtown, TX">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Downspout Extensions</h3>
@@ -1026,7 +1044,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/FoundationDrainage.png" loading="lazy" decoding="async" width="800" height="600" alt="Foundation Drainage in Springtown, TX">
+                        <picture>
+  <source srcset="images/FoundationDrainage.webp" type="image/webp">
+  <img src="images/FoundationDrainage.png" loading="lazy" decoding="async" width="800" height="600" alt="Foundation Drainage in Springtown, TX">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Foundation Drainage</h3>
@@ -1036,7 +1057,10 @@
                 </div>
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="images/DrainageRepair.png" loading="lazy" decoding="async" width="800" height="600" alt="Drainage Repairs in Springtown, TX">
+                        <picture>
+  <source srcset="images/DrainageRepair.webp" type="image/webp">
+  <img src="images/DrainageRepair.png" loading="lazy" decoding="async" width="800" height="600" alt="Drainage Repairs in Springtown, TX">
+</picture>
                     </div>
                     <div class="service-content">
                         <h3>Drainage Repairs</h3>
