--- a/free-estimate-b.html
+++ b/free-estimate-b.html
@@ -913,9 +913,9 @@
                 </div>
 
                 <div class="input-group checkbox-group" style="margin-top: 16px;">
-                  <div class="checkbox-wrapper" style="display: flex; align-items: flex-start; gap: 10px;">
-                    <input type="checkbox" id="sms_consent" name="sms_consent" required style="width: auto; margin-top: 4px; flex-shrink: 0;">
-                    <label for="sms_consent" style="font-size: 0.78rem; color: var(--muted); font-weight: 400; margin: 0;">
+                  <div class="checkbox-wrapper" style="display: flex; align-items: flex-start; gap: 12px;">
+                    <input type="checkbox" id="sms_consent" name="sms_consent" required style="width: 20px; height: 20px; min-width: 20px; margin-top: 2px; cursor: pointer; accent-color: #115740; flex-shrink: 0;">
+                    <label for="sms_consent" style="font-size: 0.78rem; color: var(--muted); font-weight: 400; line-height: 1.5; cursor: pointer; margin: 0;">
                       I agree to receive text messages from Azle Drainage about my drainage estimate and consent to the <a href="privacy-policy.html" target="_blank" style="color: var(--primary); text-decoration: underline;">Privacy Policy</a>. Message and data rates may apply. Reply STOP to opt out.
                     </label>
                   </div>
